--- a/aboutme.html
+++ b/aboutme.html
@@ -74,7 +74,7 @@
 
     <!-- loader -->
     <div id="loader"></div>
-    
+
     <div class="wrapper">
       <!--------------- navbar starts here --------------->
       <div id="navigation"></div>
@@ -96,7 +96,7 @@
                 <i class="fas fa-user-ninja"></i> TNI Cybersec
               </h3>
               <p class="wow fadeInUp" data-wow-delay="0.5s">
-                เป็นชมรมทางด้าน cyber security ที่ร่วมมือกันหลายองค์กรโดย
+                เป็นชมรมทางด้าน Cyber Security ที่ร่วมมือกันหลายองค์กรโดย
                 Thai-Nichi Institute of Technology (TNI) เป็นแกนนำหลัก
               </p>
               <img
