--- a/activities.html
+++ b/activities.html
@@ -84,7 +84,7 @@
 
     <!-- loader -->
     <div id="loader"></div>
-    
+
     <div class="wrapper">
       <!--------------- navbar starts here --------------->
       <div id="navigation"></div>
@@ -120,10 +120,10 @@
           <div class="row">
             <div class="col-lg-12 wow fadeInUp" data-wow-delay="0.5s">
               <h2 class="wow fadeInUp" data-wow-delay="0.4s">
-                <i class="fas fa-clipboard-list"></i> Activities List
+                <i class="fas fa-clipboard-list"></i> Activity List
               </h2>
               <p class="wow fadeInUp" data-wow-delay="0.5s">
-                <span class="badge badge-light">ท่านสามารถ</span> ดู Activities
+                <span class="badge badge-light">ท่านสามารถ</span> ดู Activity
                 ของเราได้ที่นี่ <i class="fas fa-arrow-circle-down"></i>
               </p>
 
@@ -135,7 +135,7 @@
                   class="btn btn-outline-light btn-block btn-lg wow fadeInUp"
                   data-wow-delay="0.6s"
                 >
-                  <i class="fas fa-clipboard-check"></i> Check Activities List
+                  <i class="fas fa-clipboard-check"></i> Check Activity List
                 </button>
               </div>
               <br />
@@ -155,16 +155,16 @@
               data-wow-delay="0.5s"
             >
               <h2 class="wow fadeInUp" data-wow-delay="0.4s">
-                <i class="fas fa-tasks"></i> Activities Status
+                <i class="fas fa-tasks"></i> Activity Status
               </h2>
               <p class="wow fadeInUp" data-wow-delay="0.5s">
                 <span class="badge badge-light">Chart</span> แบ่งตามสถานะงานของ
-                Activities ของเราได้ที่นี่
+                Activity ของเราได้ที่นี่
               </p>
               <p class="wow fadeInUp" data-wow-delay="0.5s"></p>
               <p class="wow fadeInUp" data-wow-delay="0.5s">
                 <span class="badge badge-pill list2"
-                  ><i class="far fa-bell ripple2"></i> Lasted update</span
+                  ><i class="far fa-bell ripple2"></i> Latest update</span
                 >
                 <i class="fas fa-calendar-day"></i> <span id="time"></span>
                 <i class="fas fa-hourglass-half"> </i>
@@ -248,15 +248,14 @@
               </h2>
               <p class="wow fadeInUp" data-wow-delay="0.5s">
                 เมื่อคุณ
-                <span class="badge badge-light"
-                  >! อยากเข้าร่วม Activities !</span
-                >
+                <span class="badge badge-light">! อยากเข้าร่วม Activity !</span>
                 ต้องทำอย่างไร
               </p>
               <div class="container wow fadeInUp" data-wow-delay="0.5s">
                 <p class="wow fadeInUp" data-wow-delay="0.5s">
+                  กด
                   <span class="badge badge-light"
-                    ><i class="fas fa-handshake"></i> กด Join us!</span
+                    ><i class="fas fa-handshake"></i> Join us!</span
                   >
                   ได้ที่ปุ่มด้านล่างนี้ได้เลย
                   <i class="fas fa-arrow-circle-down"></i>
