--- a/activities.html
+++ b/activities.html
@@ -70,8 +70,8 @@
       href="https://fonts.googleapis.com/css?family=Mitr:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i"
       rel="stylesheet"
     />
-    <link rel="icon" href="img/TNICyberWebIcon.png" />
-    <link rel="shortcut icon" href="img/TNICyberWebIcon.png" />
+    <link rel="icon" href="img/CyberPic.jpg" />
+    <link rel="shortcut icon" href="img/TNICyberWebIcon.ico" />
 
     <!-- for on scroll animations -->
     <link rel="stylesheet" href="css/animate.min.css" />
