--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="TNI Cybersec" content="404" />
 
-    <title>TNI Cybersec | 404 Page not found</title>
+    <title>404 Page not found</title>
 
     <!-- stylesheet -->
     <!-- stylesheet -->
@@ -97,7 +97,10 @@
             <h1 class="wow fadeInUp" data-wow-delay="0.1s">
               404 Page not found
             </h1>
-            <h6 class="wow fadeInUp" data-wow-delay="0.3s">🎵🎵🎵</h6>
+            <h3 class="wow fadeInUp" data-wow-delay="0.2s">
+              <i class="fa-solid fa-hand-pointer"></i> Tap to <i class="fa-solid fa-play"></i> & <i class="fa-solid fa-pause"></i>
+            </h3>
+            <h3 class="wow fadeInUp" data-wow-delay="0.3s"> <i class="fa-solid fa-music"></i> <i class="fa-solid fa-music"></i> <i class="fa-solid fa-music"></i></h3>
             <h6 class="wow fadeInUp" data-wow-delay="0.4s">
               Never gonna give you up
             </h6>
@@ -107,7 +110,7 @@
             <h6 class="wow fadeInUp" data-wow-delay="0.6s">
               Never gonna run around and desert you
             </h6>
-            <h6 class="wow fadeInUp" data-wow-delay="0.7s">🎵🎵🎵</h6>
+            <h3 class="wow fadeInUp" data-wow-delay="0.3s"> <i class="fa-solid fa-music"></i> <i class="fa-solid fa-music"></i> <i class="fa-solid fa-music"></i></h3>
             <!-- <button onclick="playAudio()">play</button> -->
           </div>
         </div>
