--- a/common/footer.html
+++ b/common/footer.html
@@ -31,10 +31,10 @@
           <p
             class="wow fadeInUp list badge badge-pill circleScaleBtn2"
             type="button"
-            onclick="window.open('https://creativecommons.org/publicdomain/zero/1.0/')"
+            onclick="window.open('https://creativecommons.org/licenses/by/4.0/')"
           >
             <i class="fab fa-creative-commons"></i>
-            <i class="fab fa-creative-commons-zero"></i>
+            <i class="fab fa-creative-commons-by"></i>
             <i class="fab fa-creative-commons-share"></i>
           </p>
         </div>
