--- a/termsofservice.html
+++ b/termsofservice.html
@@ -126,7 +126,7 @@
 
               <h3 class="wow fadeInUp" data-wow-delay="0.4s">
                 <i class="fab fa-creative-commons"></i>
-                <i class="fab fa-creative-commons-zero"></i>
+                <i class="fab fa-creative-commons-by"></i>
                 <i class="fab fa-creative-commons-share"></i> CC-BY
               </h3>
               <p class="wow fadeInUp" data-wow-delay="0.6s">
