--- a/activities.html
+++ b/activities.html
@@ -102,7 +102,7 @@
                 <i class="fas fa-fire-alt"></i> Activities
               </h1>
               <p class="wow fadeInUp" data-wow-delay="0.5s">
-                ท่านจะหา Activity จะตาม Activity ดูสถานะ Activity
+                ท่านจะหา Activity และดูสถานะ Activity
                 ของเราได้ที่นี่
               </p>
               <!-- <img class="wow fadeInUp center border border-light round" data-wow-delay="0.6s" src="OrderChecking.jpg" alt="IO Database" style="width: 100%; height: auto"> -->
@@ -158,7 +158,7 @@
                 <i class="fas fa-tasks"></i> Activity Status
               </h2>
               <p class="wow fadeInUp" data-wow-delay="0.5s">
-                <span class="badge badge-light">Chart</span> แบ่งตามสถานะงานของ
+                <span class="badge badge-light">Chart</span> แบ่งตามสถานะของ
                 Activity ของเราได้ที่นี่
               </p>
               <p class="wow fadeInUp" data-wow-delay="0.5s"></p>
