--- a/termsofservice.html
+++ b/termsofservice.html
@@ -109,10 +109,10 @@
         <div class="hero-content">
           <div class="row">
             <div class="col-lg-12">
-              <h3 class="wow fadeInUp" data-wow-delay="0.4s">
+              <h2 class="wow fadeInUp" data-wow-delay="0.4s">
                 <i class="fas fa-server"></i>
                 ข้อตกลงด้านข้อมูลและด้านความเป็นส่วนตัว (PDPA)
-              </h3>
+              </h2>
               <p class="wow fadeInUp" data-wow-delay="0.6s">
                 1. ทางเราจะไม่เก็บข้อมูลส่วนตัวของท่านแต่อย่างไร
               </p>
@@ -124,15 +124,16 @@
               </p>
               <br />
 
-              <h3 class="wow fadeInUp" data-wow-delay="0.4s">
+              <h2 class="wow fadeInUp" data-wow-delay="0.4s">
                 <i class="fab fa-creative-commons"></i>
                 <i class="fab fa-creative-commons-by"></i>
                 <i class="fab fa-creative-commons-share"></i> CC-BY
-              </h3>
+              </h2>
               <p class="wow fadeInUp" data-wow-delay="0.6s">
                 CC-BY อนุญาตให้ผู้อื่นทำซ้ำ แจกจ่าย
                 หรือแสดงและนำเสนอชิ้นงานดังกล่าว
-                และสร้างงานดัดแปลงจากชิ้นงานดังกล่าวได้เฉพาะกรณีที่ได้แสดงเครดิตตามที่ระบุไว้
+                และสร้างงานดัดแปลงจากชิ้นงานดังกล่าวได้
+                เฉพาะกรณีที่ได้แสดงเครดิตตามที่ระบุไว้
                 <br />
               </p>
             </div>
@@ -140,9 +141,9 @@
           <br />
           <div class="row">
             <div class="col-lg-12">
-              <h3 class="wow fadeInUp" data-wow-delay="0.4s">
+              <h2 class="wow fadeInUp" data-wow-delay="0.4s">
                 <i class="far fa-window-maximize"></i> Web Information
-              </h3>
+              </h2>
               <p class="wow fadeInUp" data-wow-delay="0.6s">
                 <i class="fas fa-cogs"></i> 4.0.8
                 <span class="badge badge-warning">2022 BETA</span>
